--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,10 @@
   background-image: url($image);
   background-size: 25px;
   background-repeat: no-repeat;
+  position: fixed;
+  text-align: center;
+  width: 25%;
+  padding: 15px;
   background-position: left 80px center;
   padding-left: 20px;
 }
@@ -246,7 +250,7 @@ html {
                 padding: 15px 0;
                 text-align: center;
                 border-bottom: solid 1px #ddd;
-                // width: 25%;
+                width: 25%;
               }
 
               .html {
@@ -504,3 +508,24 @@ html {
 
 
 
+@media screen and (max-width:639px) {
+  /*スマホ用のcssを記述*/
+  }
+     
+  @media only screen and (min-width:640px) and (max-width:1023px) {
+  /*tablet用のcssを記述*/
+
+  /* skill */
+  .about {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+
+    .content {
+      width: 50%;
+      height: auto;
+    }
+  }
+  /* skill */
+  }
